--- a/megapower/server/package.json
+++ b/megapower/server/package.json
@@ -5,9 +5,37 @@
     "author": "dev_team",
     "license": "MIT",
     "dependencies": {
-        "json-server": "^0.17.0"
+        "@sendgrid/mail": "^6.4.0",
+        "bcrypt": "^3.0.6",
+        "body-parser": "^1.19.0",
+        "concurrently": "^5.3.0",
+        "cookie-parser": "^1.4.4",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.2",
+        "express-jwt": "^5.3.3",
+        "express-validator": "^6.2.0",
+        "formidable": "^1.2.1",
+        "google-auth-library": "^5.5.1",
+        "json-server": "^0.17.0",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.19",
+        "mongoose": "^5.11.15",
+        "morgan": "^1.9.1",
+        "node-fetch": "^2.6.0",
+        "nodemon": "^1.19.1",
+        "path": "^0.12.7",
+        "postcss-cli": "^7.1.1",
+        "stripe": "^7.4.0",
+        "tailwindcss": "^1.4.5",
+        "twilio": "^3.49.4",
+        "uuid": "^3.3.3"
     },
     "scripts": {
+        "develop": "nodemon node index.js",
         "start": "json-server -p3005 -w db.json"
+    },
+    "devDependencies": {
+        "prettier": "2.5.1"
     }
 }
